--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
                   fill="currentColor" />
               </svg>
               <span class="text">Reply</span>
+              <span class="line"></span>
             </span>
             <span class="stat discuss">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-quote"
@@ -622,6 +623,9 @@
             </span>
           </div>
           <form action="" class="reply">
+            <div class="image">
+              <img src="img/img.jpg" alt="Fredrick Ochieng" srcset="">
+            </div>
             <textarea name="reply" placeholder="Respond to #A0343"  id="reply"></textarea>
             <button type="submit">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512">
