--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
             <textarea name="reply" placeholder="What's your opinion?" id="reply"></textarea>
             <button type="submit">Post</button>
           </form>
-          <div class="totle">
+          <div class="title">
             <h2 class="opinion">Opinions</h2>
             <div class="right">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
