--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     content="https://getopas.pythonanywhere.com/@femar/debian-vs-ubuntu-linux-which-one-should-you-choose-1-23">
 
   <script type="module">
-    import OpinionWrapper from "/js/opinion.component.js";
+    import OpinionWrapper from "./js/opinion.component.js";
 
     customElements.define('opinion-wrapper', OpinionWrapper);
   </script>
