--- a/home.html
+++ b/home.html
@@ -447,8 +447,15 @@
     </ul>
   </header>
 
+  <section class="trending">
+    Trending
+  </section>
   <main class="home">
-    landing
+    <section class="stories recent">Recent stories</section>
+    <section class="side people">Side people</section>
+    <section class="stories popular">Popular stories</section>
+    <section class="side people">Side people</section>
+    <section class="stories popular">infinite scroll</section>
   </main>
   <footer class="footer">
     <section class="newsletter">
