--- a/home.html
+++ b/home.html
@@ -553,10 +553,82 @@
           <p class="info">Subscribe to unlock new features and if eligible, receive a share of ads revenue.</p>
           <a href="" class="link">Learn more</a>
         </div>
+        <ul class="topics">
+          <h2 class="title">Topics</h2>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">63</span>
+              <span class="text">Health Care</span>
+            </a>
+            </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">1.03k</span>
+              <span class="text">Spotify</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">3</span>
+              <span class="text">Good morning</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">117</span>
+              <span class="text">Sora</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">71</span>
+              <span class="text">Video Tape</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">44</span>
+              <span class="text">Kendrick Lamar</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">9</span>
+              <span class="text">World War III</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">13</span>
+              <span class="text">Christian</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">5</span>
+              <span class="text">Nato</span>
+            </a>
+          </li>
+          <li class="topic">
+            <a href="" class="link">
+              <span class="no">73</span>
+              <span class="text">Programming</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
-    <section class="side people">Side people</section>
-    <section class="side people">Side people</section>
+    <section class="feeds">
+      <div class="stories new">
+        <div class="story">
+          <span class="time">6 min read</span>
+          <h3 class="title">
+            <a href="" class="link">The US Senate called on the law markers</a>
+          </h3>
+        </div>
+      </div>
+      <div class="people">people</div>
+    </section>
   </main>
   <footer class="footer">
     <section class="newsletter">
