--- a/home.html
+++ b/home.html
@@ -653,7 +653,7 @@
                   <p class="name">Fredrick Ochieng</p>
                   <span class="bio">Student at The East African University</span>
                 </div>
-                <span class="action">Follow</span>
+                <span class="action">Following</span>
               </div>
             </span>
             <span class="time">
