--- a/home.html
+++ b/home.html
@@ -623,8 +623,8 @@
         <div class="story">
           <span class="read-time">
             <span class="text">6 min read</span>
-            <span class="sp">-</span>
-            <span class="views">6.03k views</span>
+            <span class="sp"></span>
+            <span class="views">603 views</span>
           </span>
           <h3 class="title">
             <a href="" class="link">The US Senate called on the law markers</a>
