--- a/home.html
+++ b/home.html
@@ -893,7 +893,40 @@
           </div>
         </div>
       </div>
-      <div class="people">people</div>
+      <div class="people">
+        <div class="person">
+          <div class="head">
+            <div class="image">
+              <img src="" alt="User profile">
+            </div>
+            <div class="name">
+              <h4 class="uid">
+                <a href="" class="link">U0A98PBAB</a>
+              </h4>
+              <span class="followers">
+                <span class="no">23</span>
+                <span class="text">followers</span>
+              </span>
+            </div>
+          </div>
+          <div class="actions">
+            <span class="follow">
+              <span class="text">Follow</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
+                viewBox="0 0 16 16">
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+              </svg>
+            </span>
+            <span class="dismiss">
+              <span class="text">Dismiss</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                <path
+                  d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+              </svg>
+            </span>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
