--- a/home.html
+++ b/home.html
@@ -845,6 +845,87 @@
             </span>
           </div>
         </div>
+        <div class="story opinion">
+          <div class="meta">
+            <a href="" class="opinion-link">Q0A43PBA</a>
+            <span class="sp">•</span>
+            <span class="author">
+              <span class="sp">by</span>
+              <div class="author-name">
+                <a href="" class="link">U0A43PBA</a>
+                <div class="profile">
+                  <span class="pointer"></span>
+                  <div class="head">
+                    <div class="image">
+                      <img src="img/img.jpg" alt="User profile">
+                    </div>
+                    <div class="info">
+                      <p class="name">
+                        <span class="text">U0A43PBA</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                          class="bi bi-patch-check" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd"
+                            d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0" />
+                          <path
+                            d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911z" />
+                        </svg>
+                      </p>
+                      <a href="" class="followers">
+                        <span class="no">23</span>
+                        <span class="text">followers</span>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="data">
+                    <p class="name">Fredrick Ochieng</p>
+                    <span class="bio">Student at The East African University</span>
+                  </div>
+                  <span class="action follow">Follow</span>
+                </div>
+              </div>
+            </span>
+          </div>
+          <div class="content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, voluptas ratione! Corporis, enim accusantium
+              possimus minima eum illo atque dolorum provident nisi.</p>
+            <p>Facilis nulla optio quas quod veniam nam voluptas!</p>
+          </div>
+          <div class="stats">
+            <span class="stat write">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M12 22.0001C4.617 22.0001 2 19.3831 2 12.0001C2 4.61712 4.617 2.00012 12 2.00012C12.414 2.00012 12.75 2.33612 12.75 2.75012C12.75 3.16412 12.414 3.50012 12 3.50012C5.486 3.50012 3.5 5.48612 3.5 12.0001C3.5 18.5141 5.486 20.5001 12 20.5001C18.514 20.5001 20.5 18.5141 20.5 12.0001C20.5 11.5861 20.836 11.2501 21.25 11.2501C21.664 11.2501 22 11.5861 22 12.0001C22 19.3831 19.383 22.0001 12 22.0001Z"
+                  fill="currentColor"></path>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M19.2365 9.38606L20.2952 8.19072C21.4472 6.88972 21.3252 4.89472 20.0252 3.74172C19.3952 3.18372 18.5812 2.90372 17.7452 2.95572C16.9052 3.00672 16.1352 3.38272 15.5772 4.01272L9.6932 10.6607C7.8692 12.7187 9.1172 15.4397 9.1712 15.5547C9.2602 15.7437 9.4242 15.8877 9.6232 15.9497C9.6802 15.9687 10.3442 16.1717 11.2192 16.1717C12.2042 16.1717 13.4572 15.9127 14.4092 14.8367L19.0774 9.56571C19.1082 9.54045 19.1374 9.51238 19.1646 9.4815C19.1915 9.45118 19.2155 9.41925 19.2365 9.38606ZM10.4082 14.5957C11.0352 14.7097 12.4192 14.8217 13.2862 13.8427L17.5371 9.04299L15.0656 6.85411L10.8172 11.6557C9.9292 12.6567 10.2122 13.9917 10.4082 14.5957ZM16.0596 5.73076L18.5322 7.91938L19.1722 7.19672C19.7752 6.51472 19.7122 5.46872 19.0312 4.86572C18.7002 4.57372 18.2712 4.42472 17.8362 4.45272C17.3962 4.48072 16.9932 4.67672 16.7002 5.00672L16.0596 5.73076Z"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text">Reply</span>
+              <span class="line"></span>
+            </span>
+            <span class="stat discuss">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-quote"
+                viewBox="0 0 16 16">
+                <path
+                  d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105">
+                </path>
+                <path
+                  d="M7.066 6.76A1.665 1.665 0 0 0 4 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z">
+                </path>
+              </svg>
+              <span class="no">98</span>
+            </span>
+          </div>
+          <div class="form-container">
+            <form action="" class="reply">
+              <div class="image">
+                <img src="img/img.jpg" alt="Profile picture">
+              </div>
+              <textarea name="reply" placeholder="Discuss opinion #D0343" id="reply"></textarea>
+              <button type="submit">Reply</button>
+            </form>
+          </div>
+        </div>
         <div class="story">
           <span class="read-time">6 min read</span>
           <h3 class="title">
@@ -894,10 +975,62 @@
         </div>
       </div>
       <div class="people">
+        <div class="title">
+          <h4 class="title">People</h4>
+          <span class="desc">Discover authors on avalQ</span>
+        </div>
         <div class="person">
           <div class="head">
             <div class="image">
-              <img src="" alt="User profile">
+              <img src="img/img.jpg" alt="User profile">
+            </div>
+            <div class="name">
+              <h4 class="uid">
+                <a href="" class="link">U0A98PBAB</a>
+                <div class="profile">
+                  <span class="pointer"></span>
+                  <div class="head">
+                    <div class="image">
+                      <img src="img/img.jpg" alt="User profile">
+                    </div>
+                    <div class="info">
+                      <p class="name">
+                        <span class="text">U0A43PBA</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-check"
+                          viewBox="0 0 16 16">
+                          <path fill-rule="evenodd"
+                            d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0" />
+                          <path
+                            d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911z" />
+                        </svg>
+                      </p>
+                      <a href="" class="followers">
+                        <span class="no">23</span>
+                        <span class="text">followers</span>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="data">
+                    <p class="name">Fredrick Ochieng</p>
+                    <span class="bio">Student at The East African University</span>
+                  </div>
+                  <span class="action follow">Follow</span>
+                </div>
+              </h4>
+              <span class="followers">
+                <span class="no">23</span>
+                <span class="text">followers</span>
+              </span>
+            </div>
+          </div>
+          <span class="action follow">
+            <span class="text">Follow</span>
+          </span>
+        </div>
+        <div class="person">
+          <div class="head">
+            <div class="image">
+              <img src="img/img.jpg" alt="User profile">
             </div>
             <div class="name">
               <h4 class="uid">
@@ -909,22 +1042,66 @@
               </span>
             </div>
           </div>
-          <div class="actions">
-            <span class="action follow">
-              <span class="text">Follow</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
-                viewBox="0 0 16 16">
-                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
-              </svg>
-            </span>
-            <span class="action dismiss">
-              <span class="text">Dismiss</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                <path
-                  d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-              </svg>
-            </span>
+          <span class="action follow">
+            <span class="text">Follow</span>
+          </span>
+        </div>
+        <div class="person">
+          <div class="head">
+            <div class="image">
+              <img src="img/img.jpg" alt="User profile">
+            </div>
+            <div class="name">
+              <h4 class="uid">
+                <a href="" class="link">U0A98PBAB</a>
+              </h4>
+              <span class="followers">
+                <span class="no">23</span>
+                <span class="text">followers</span>
+              </span>
+            </div>
           </div>
+          <span class="action follow">
+            <span class="text">Follow</span>
+          </span>
+        </div>
+        <div class="person">
+          <div class="head">
+            <div class="image">
+              <img src="img/img.jpg" alt="User profile">
+            </div>
+            <div class="name">
+              <h4 class="uid">
+                <a href="" class="link">U0A98PBAB</a>
+              </h4>
+              <span class="followers">
+                <span class="no">23</span>
+                <span class="text">followers</span>
+              </span>
+            </div>
+          </div>
+          <span class="action follow">
+            <span class="text">Follow</span>
+          </span>
+        </div>
+        <div class="person">
+          <div class="head">
+            <div class="image">
+              <img src="img/img.jpg" alt="User profile">
+            </div>
+            <div class="name">
+              <h4 class="uid">
+                <a href="" class="link">U0A98PBAB</a>
+              </h4>
+              <span class="followers">
+                <span class="no">23</span>
+                <span class="text">followers</span>
+              </span>
+            </div>
+          </div>
+          <span class="action follow">
+            <span class="text">Follow</span>
+          </span>
         </div>
       </div>
     </section>
