--- a/home.html
+++ b/home.html
@@ -554,7 +554,10 @@
           <a href="" class="link">Learn more</a>
         </div>
         <ul class="topics">
-          <h2 class="title">Topics</h2>
+          <div class="title">
+            <h4 class="title">Topics</h4>
+            <span class="text">Trending topics now</span>
+          </div>
           <li class="topic">
             <a href="" class="link">
               <span class="no">63</span>
