--- a/home.html
+++ b/home.html
@@ -626,7 +626,7 @@
         <div class="story">
           <span class="read-time">
             <span class="text">6 min read</span>
-            <span class="sp"></span>
+            <span class="sp">•</span>
             <span class="views">603 views</span>
           </span>
           <h3 class="title">
