--- a/home.html
+++ b/home.html
@@ -19,9 +19,11 @@
   <script type="module">
     import OpinionWrapper from "./js/opinion.component.js";
     import StoryWrapper from "./js/story.component.js";
+		import PersonWrapper from "./js/author.component.js";
 
     customElements.define('opinion-wrapper', OpinionWrapper);
     customElements.define('story-wrapper', StoryWrapper);
+		customElements.define('person-wrapper', PersonWrapper);
   </script>
 </head>
 
@@ -683,130 +685,31 @@
             <h4 class="title">People</h4>
             <span class="desc">Discover authors on avalQ</span>
           </div>
-          <div class="person">
-            <div class="head">
-              <div class="image">
-                <img src="img/img.jpg" alt="User profile">
-              </div>
-              <div class="name">
-                <h4 class="uid">
-                  <a href="" class="link">U0A98PBAB</a>
-                  <div class="profile">
-                    <span class="pointer"></span>
-                    <div class="head">
-                      <div class="image">
-                        <img src="img/img.jpg" alt="User profile">
-                      </div>
-                      <div class="info">
-                        <p class="name">
-                          <span class="text">U0A43PBA</span>
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-patch-check" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                              d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0" />
-                            <path
-                              d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911z" />
-                          </svg>
-                        </p>
-                        <a href="" class="followers">
-                          <span class="no">23</span>
-                          <span class="text">followers</span>
-                        </a>
-                      </div>
-                    </div>
-                    <div class="data">
-                      <p class="name">Fredrick Ochieng</p>
-                      <span class="bio">Student at The East African University</span>
-                    </div>
-                    <span class="action follow">Follow</span>
-                  </div>
-                </h4>
-                <span class="followers">
-                  <span class="no">23</span>
-                  <span class="text">followers</span>
-                </span>
-              </div>
-            </div>
-            <span class="action follow">
-              <span class="text">Follow</span>
-            </span>
-          </div>
-          <div class="person">
-            <div class="head">
-              <div class="image">
-                <img src="img/img.jpg" alt="User profile">
-              </div>
-              <div class="name">
-                <h4 class="uid">
-                  <a href="" class="link">U0A98PBAB</a>
-                </h4>
-                <span class="followers">
-                  <span class="no">23</span>
-                  <span class="text">followers</span>
-                </span>
-              </div>
-            </div>
-            <span class="action follow">
-              <span class="text">Follow</span>
-            </span>
-          </div>
-          <div class="person">
-            <div class="head">
-              <div class="image">
-                <img src="img/img.jpg" alt="User profile">
-              </div>
-              <div class="name">
-                <h4 class="uid">
-                  <a href="" class="link">U0A98PBAB</a>
-                </h4>
-                <span class="followers">
-                  <span class="no">23</span>
-                  <span class="text">followers</span>
-                </span>
-              </div>
-            </div>
-            <span class="action follow">
-              <span class="text">Follow</span>
-            </span>
-          </div>
-          <div class="person">
-            <div class="head">
-              <div class="image">
-                <img src="img/img.jpg" alt="User profile">
-              </div>
-              <div class="name">
-                <h4 class="uid">
-                  <a href="" class="link">U0A98PBAB</a>
-                </h4>
-                <span class="followers">
-                  <span class="no">23</span>
-                  <span class="text">followers</span>
-                </span>
-              </div>
-            </div>
-            <span class="action follow">
-              <span class="text">Follow</span>
-            </span>
-          </div>
-          <div class="person">
-            <div class="head">
-              <div class="image">
-                <img src="img/img.jpg" alt="User profile">
-              </div>
-              <div class="name">
-                <h4 class="uid">
-                  <a href="" class="link">U0A98PBAB</a>
-                </h4>
-                <span class="followers">
-                  <span class="no">23</span>
-                  <span class="text">followers</span>
-                </span>
-              </div>
-            </div>
-            <span class="action follow">
-              <span class="text">Follow</span>
-            </span>
-          </div>
+	        <person-wrapper id="U0A43PBA" img="img/img.jpg"
+	          verified="true" name="Fredrick Ochieng"
+	          bio="Student At The East African University"
+	          followers="23" following="false">
+	        </person-wrapper>
+	        <person-wrapper id="U0A43PBA" img="img/img.jpg"
+	                        verified="true" name="Fredrick Ochieng"
+	                        bio="Student At The East African University"
+	                        followers="23" following="false">
+	        </person-wrapper>
+	        <person-wrapper id="U0A43PBA" img="img/img.jpg"
+	                        verified="true" name="Fredrick Ochieng"
+	                        bio="Student At The East African University"
+	                        followers="23" following="false">
+	        </person-wrapper>
+	        <person-wrapper id="U0A43PBA" img="img/img.jpg"
+	                        verified="true" name="Fredrick Ochieng"
+	                        bio="Student At The East African University"
+	                        followers="23" following="false">
+	        </person-wrapper>
+	        <person-wrapper id="U0A43PBA" img="img/img.jpg"
+	                        verified="true" name="Fredrick Ochieng"
+	                        bio="Student At The East African University"
+	                        followers="23" following="false">
+	        </person-wrapper>
           <div class="more">
             <p>Discover authors and follow authors. Interact, support and engage with authors.</p>
             <a href="" class="link">Discover</a>
