--- a/home.html
+++ b/home.html
@@ -22,16 +22,20 @@
 		import PersonWrapper from "./js/author.component.js";
 		import StoryLoader from "./js/loaders/story.loader.js";
 		import PeopleLoader from "./js/loaders/people.loader.js";
+		import TopicsLoader from "./js/loaders/topics.loader.js";
 		import StoryFeed from "./js/feeds/stories.feed.js";
 		import PeopleContainer from "./js/containers/people.container.js";
+		import TopicsContainer from "./js/containers/topics.container.js";
 
     customElements.define('opinion-wrapper', OpinionWrapper);
     customElements.define('story-wrapper', StoryWrapper);
 		customElements.define('person-wrapper', PersonWrapper);
 		customElements.define('story-loader', StoryLoader);
 		customElements.define('people-loader', PeopleLoader);
+		customElements.define('topics-loader', TopicsLoader);
 		customElements.define('stories-feed', StoryFeed);
-		customElements.define('people-container', PeopleContainer)
+		customElements.define('people-container', PeopleContainer);
+		customElements.define('topics-container', TopicsContainer);
   </script>
 </head>
 
@@ -562,85 +566,7 @@
           <p class="info">Subscribe to unlock new features and if eligible, receive a share of ads revenue.</p>
           <a href="" class="link">Learn more</a>
         </div>
-        <ul class="topics">
-          <div class="title">
-            <h4 class="title">Topics</h4>
-            <span class="text">Trending topics now</span>
-          </div>
-	        <li class="topics-loader">
-		        <span class="topic one skeleton"></span>
-		        <span class="topic two skeleton"></span>
-		        <span class="topic three skeleton"></span>
-		        <span class="topic four skeleton"></span>
-		        <span class="topic five skeleton"></span>
-		        <span class="topic six skeleton"></span>
-		        <span class="topic seven skeleton"></span>
-		        <span class="topic eight skeleton"></span>
-		        <span class="topic nine skeleton"></span>
-		        <span class="topic ten skeleton"></span>
-		        <span class="topic eleven skeleton"></span>
-	        </li>
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">63</span>-->
-<!--              <span class="text">Health Care</span>-->
-<!--            </a>-->
-<!--            </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">1.03k</span>-->
-<!--              <span class="text">Spotify</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">3</span>-->
-<!--              <span class="text">Good morning</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">117</span>-->
-<!--              <span class="text">Sora</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">71</span>-->
-<!--              <span class="text">Video Tape</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">44</span>-->
-<!--              <span class="text">Kendrick Lamar</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">9</span>-->
-<!--              <span class="text">World War III</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">13</span>-->
-<!--              <span class="text">Christian</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">5</span>-->
-<!--              <span class="text">Nato</span>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="topic">-->
-<!--            <a href="" class="link">-->
-<!--              <span class="no">73</span>-->
-<!--              <span class="text">Programming</span>-->
-<!--            </a>-->
-<!--          </li>-->
-        </ul>
+        <topics-container url="/topics/popular"></topics-container>
       </div>
     </section>
     <section class="feeds">
